# hands-on-machine-learning

./: .gitignore  Chapter-1-Machine-Learning-Overview.md
chapter-2/: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
chapter-2/chapter2/: __init__.py  conf.py  utils.py
chapter-2/chapter2/data/: datasources.py  make_dataset.py
chapter-2/chapter2/etl/: __init__.py  datasources.py  io.py  pipeline.py  preprocessing.py
chapter-2/chapter2/features/: build_features.py
chapter-2/docs/: Makefile  conf.py  index.rst  make.bat
chapter-2/notebooks/: chapter-2-00-first-look.ipynb  chapter-2-00-first-look.py  chapter-2-10-explore-training-set.ipynb  chapter-2-10-explore-training-set.py  chapter-2-20-features.ipynb  chapter-2-20-features.py  chapter-2-30-model.py.ipynb
